# minPCA

./: .gitignore  README.md  autoencoder.py  example.ipynb  minpca.py  mnist.py  plot.py  pyproject.toml  utils.py
minPCA/: __init__.py  covs.py  minpca.py  utils.py
